--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   sqflite: ^2.0.2+1
   path_provider: ^2.0.11
   fluttertoast: ^8.0.9
+  #  Para el grafico
+  syncfusion_flutter_charts: ^20.3.61
 
 
 dev_dependencies:
